crates/k-rust/tests/snapshots/module_to_kore__emits_algebraic_axioms.snap
---
source: crates/k-rust/tests/module_to_kore.rs
description: "K definition:\n\nmodule MAIN\n  syntax Exp ::= \".Exp\" [function, symbol(.Exp)]\n  syntax Exp ::= Exp \"++\" Exp\n    [assoc, comm, function, idem, symbol(_++_), unit(.Exp)]\n  syntax Exp ::= Exp \"~\" Exp [symbol(_~_), unit(.Exp)]\n\n  syntax {S} Box{S}\n  syntax {S} Box{S} ::= Box{S} \"merge\" Box{S}\n    [assoc, idem, symbol(merge)]\nendmodule\n"
---
// semantics
module MAIN
  import K []
  sort SortBox{SortS0}
  [
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(7,3,7,20)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
  ]
  sort SortExp{} []
  symbol Lbl'Stop'Exp{}() : SortExp{}
  [
    function{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(2,18,2,49)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    symbol'Kywd'{}(".Exp")
  ]
  symbol Lbl'UndsPlusPlusUnds'{}(SortExp{}, SortExp{}) : SortExp{}
  [
    function{}(),
    idem{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(3,18,4,60)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    symbol'Kywd'{}("_++_"),
    unit{}(Lbl'Stop'Exp{}())
  ]
  symbol Lbl'UndsTildUnds'{}(SortExp{}, SortExp{}) : SortExp{}
  [
    constructor{}(),
    functional{}(),
    injective{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(5,18,5,55)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    symbol'Kywd'{}("_~_"),
    unit{}(Lbl'Stop'Exp{}())
  ]
  symbol Lblmerge{SortS}(SortBox{SortS}, SortBox{SortS}) : SortBox{SortS}
  [
    functional{}(),
    idem{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(8,25,9,33)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    symbol'Kywd'{}("merge")
  ]
  axiom{R}
    \equals{SortExp{}, R}(
      Lbl'UndsPlusPlusUnds'{}(Lbl'UndsPlusPlusUnds'{}(K1:SortExp{}, K2:SortExp{}), K3:SortExp{}),
      Lbl'UndsPlusPlusUnds'{}(K1:SortExp{}, Lbl'UndsPlusPlusUnds'{}(K2:SortExp{}, K3:SortExp{}))
    )
    [assoc{}()]
  axiom{R}
    \equals{SortExp{}, R}(Lbl'UndsPlusPlusUnds'{}(K:SortExp{}, K:SortExp{}), K:SortExp{})
    [idem{}()]
  axiom{R}
    \equals{SortExp{}, R}(Lbl'UndsPlusPlusUnds'{}(K:SortExp{}, Lbl'Stop'Exp{}()), K:SortExp{})
    [unit{}()]
  axiom{R}
    \equals{SortExp{}, R}(Lbl'UndsPlusPlusUnds'{}(Lbl'Stop'Exp{}(), K:SortExp{}), K:SortExp{})
    [unit{}()]
  axiom{R}
    \exists{R}(
      Val:SortExp{},
      \equals{SortExp{}, R}(Val:SortExp{}, Lbl'UndsTildUnds'{}(K0:SortExp{}, K1:SortExp{}))
    )
    [functional{}()]
  axiom{}
    \implies{SortExp{}}(
      \and{SortExp{}}(
        Lbl'UndsTildUnds'{}(X0:SortExp{}, X1:SortExp{}),
        Lbl'UndsTildUnds'{}(Y0:SortExp{}, Y1:SortExp{})
      ),
      Lbl'UndsTildUnds'{}(
        \and{SortExp{}}(X0:SortExp{}, Y0:SortExp{}),
        \and{SortExp{}}(X1:SortExp{}, Y1:SortExp{})
      )
    )
    [constructor{}()]
  axiom{R, SortS}
    \equals{SortBox{SortS}, R}(
      Lblmerge{SortS}(Lblmerge{SortS}(K1:SortBox{SortS}, K2:SortBox{SortS}), K3:SortBox{SortS}),
      Lblmerge{SortS}(K1:SortBox{SortS}, Lblmerge{SortS}(K2:SortBox{SortS}, K3:SortBox{SortS}))
    )
    [assoc{}()]
  axiom{R, SortS}
    \equals{SortBox{SortS}, R}(
      Lblmerge{SortS}(K:SortBox{SortS}, K:SortBox{SortS}),
      K:SortBox{SortS}
    )
    [idem{}()]
  axiom{R, SortS}
    \exists{R}(
      Val:SortBox{SortS},
      \equals{SortBox{SortS}, R}(
        Val:SortBox{SortS},
        Lblmerge{SortS}(K0:SortBox{SortS}, K1:SortBox{SortS})
      )
    )
    [functional{}()]
  axiom{}
    \or{SortExp{}}(
      \exists{SortExp{}}(
        X0:SortExp{},
        \exists{SortExp{}}(X1:SortExp{}, Lbl'UndsTildUnds'{}(X0:SortExp{}, X1:SortExp{}))
      ),
      \bottom{SortExp{}}()
    )
    [constructor{}()]
endmodule [
  org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(1,1,10,10)"),
  org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
]

// syntax
module MAIN
  import K []
  sort SortBox{SortS0}
  [
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(7,3,7,20)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)")
  ]
  sort SortExp{} []
  symbol Lbl'Stop'Exp{}() : SortExp{}
  [
    format{}(),
    function{}(),
    left{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(2,18,2,49)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    priorities{}(),
    right{}(),
    symbol'Kywd'{}(".Exp"),
    terminals{}("1")
  ]
  symbol Lbl'UndsPlusPlusUnds'{}(SortExp{}, SortExp{}) : SortExp{}
  [
    assoc{}(),
    comm{}(),
    format{}(),
    function{}(),
    idem{}(),
    left{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(3,18,4,60)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    priorities{}(),
    right{}(),
    symbol'Kywd'{}("_++_"),
    terminals{}("010"),
    unit{}(Lbl'Stop'Exp{}())
  ]
  symbol Lbl'UndsTildUnds'{}(SortExp{}, SortExp{}) : SortExp{}
  [
    constructor{}(),
    format{}(),
    functional{}(),
    injective{}(),
    left{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(5,18,5,55)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    priorities{}(),
    right{}(),
    symbol'Kywd'{}("_~_"),
    terminals{}("010"),
    unit{}(Lbl'Stop'Exp{}())
  ]
  symbol Lblmerge{SortS}(SortBox{SortS}, SortBox{SortS}) : SortBox{SortS}
  [
    assoc{}(),
    format{}(),
    functional{}(),
    idem{}(),
    left{}(),
    org'Stop'kframework'Stop'attributes'Stop'Location{}("Location(8,25,9,33)"),
    org'Stop'kframework'Stop'attributes'Stop'Source{}("Source(declarations.k)"),
    priorities{}(),
    right{}(),
    symbol'Kywd'{}("merge"),
    terminals{}("010")
  ]
endmodule []

// macros
